force-app/main/default/objects/Survey_Answer__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Answers</relationshipLabel>
    <relationshipName>Survey_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>