force-app/main/default/objects/Survey_Answer__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Survey Answers</relationshipLabel>
    <relationshipName>Survey_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>