force-app/main/default/objects/Survey_Answer__c/fields/Survey_Template__c.field-meta.xml
<CustomField>
    <fullName>Survey_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Survey_Template__c</referenceTo>
    <relationshipLabel>Survey Answers</relationshipLabel>
    <relationshipName>Survey_Answers_del</relationshipName>
    <type>Lookup</type>
</CustomField>